--- a/src/App.css
+++ b/src/App.css
@@ -3,4 +3,8 @@
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 50px;
 }
