Реализовал логику добавления, удаление и вывод общего счета.

--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,16 @@
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 50px;
+    max-width: 1280px;
+    margin: 0 auto;
+    padding: 2rem;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 50px;
+}
+
+.total-price {
+    position: absolute;
+    bottom: -10px;
+    left: 10px;
 }
