--- a/src/components/OrderItem/OrderItem.css
+++ b/src/components/OrderItem/OrderItem.css
@@ -1,31 +1,35 @@
 .order-item-block {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 60px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 60px;
 }
 
 .order-item-info {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    gap: 50px;
-    width: 240px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 50px;
+  width: 240px;
 }
 
 .delete-btn {
-    padding: 10px;
+  padding: 10px;
+  border: none;
+  transition: opacity .2s, scale 0.150s;
+  background: url("/icons/trash.svg") center center / 22px no-repeat;
+
+  &:hover {
+    opacity: 0.7;
     border: none;
-    transition: opacity .2s;
-    background: url("/icons/trash.svg") center center / 26px no-repeat;
+  }
 
-    &:hover {
-        opacity: 0.7;
-        border: none;
-    }
+  &:focus {
+    outline: none;
+    border: none;
+  }
 
-    &:focus {
-        outline: none;
-        border: none;
-    }
+  &:active {
+    scale: 0.8;
+  }
 }
