--- a/src/components/OrderItem/OrderItem.css
+++ b/src/components/OrderItem/OrderItem.css
@@ -2,7 +2,12 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: 60px;
+  height: 50px;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+
+  & h4, p {
+    margin: 0;
+  }
 }
 
 .order-item-info {
